--- a/compose.yaml
+++ b/compose.yaml
@@ -26,7 +26,7 @@ services:
             - redis
             - mailpit
     pgsql:
-        image: 'postgres:18-alpine'
+        image: 'postgis/postgis:17-3.5' 
         ports:
             - '${FORWARD_DB_PORT:-5432}:5432'
         environment:
